@@ -1,3 +1,8 @@
+2007-07-08  Philip Van Hoof  <pvanhoof@gnome.org>
+
+	* Yet another attempt at fixing the namespace problem (empty root
+	folders)
+
 2007-07-08  Dirk-Jan C. Binnema <dirk-jan.binnema@nokia.com>
 
 	* Temporary empty root folder fix
